--- a/exercises/exercise/styles-for-blank.css
+++ b/exercises/exercise/styles-for-blank.css
@@ -32,3 +32,18 @@ nav ul li:first-child{
 tbody tr:nth-child(odd){
     background-color: aqua;
 }
+::selection{
+    background-color: crimson;
+}
+.product a:hover{
+    cursor: pointer;
+}
+input{
+    height: 20px;
+}
+input[type="text"]{
+    border-color: lightgray;
+}
+input[name="message"]{
+    height: 50px;
+}
