--- a/exercises/exercise/dark_theme.css
+++ b/exercises/exercise/dark_theme.css
@@ -63,4 +63,48 @@ a{
     color:rgb(183, 88, 0);
     margin: 5px 5px;
 }
+.loader{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color:  rgb(47,2,75);
+    display: flex;
+
+    animation-duration: 3s;
+    animation-name: loader;
+    animation-fill-mode: forwards;
+}
+@keyframes loader {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+    }
+}
+
+body *:not(.loader){
+    opacity: 0;
+    animation-delay: 1s;
+    animation-duration: 3s;
+    animation-name: body;
+    animation-fill-mode: forwards;
+}
+@keyframes body {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+}
+.loader img{
+    margin: 0 auto;
+}
+
+
 
