--- a/exercises/exercise/dark_theme.css
+++ b/exercises/exercise/dark_theme.css
@@ -19,6 +19,9 @@ tbody tr:nth-child(odd){
 }
 
 h1{
+    margin-top:20px;
+}
+h1{
     color:  rgb(183, 88, 0); 
     font-size: 34px; 
     font-family: Aeonik; 
