--- a/exercises/exercise/dark_theme.css
+++ b/exercises/exercise/dark_theme.css
@@ -48,16 +48,31 @@ button:hover{
     align-items: center;
 }
 
-nav img:hover+ .links #first{
+nav a:focus+ .links #first{
     color: white;
     transition: 0.5s;
 }
-nav img:hover+ .links #second{
+nav a:focus+ .links #second{
     color: white;
     transition: 0.5s;
     transition-delay: 1s;
 }
-nav img:hover+ .links #third{
+nav a:focus+ .links #third{
+    color: white;
+    transition: 0.5s;
+    transition-delay: 1.5s;
+}
+
+nav a:hover+ .links #first{
+    color: white;
+    transition: 0.5s;
+}
+nav a:hover+ .links #second{
+    color: white;
+    transition: 0.5s;
+    transition-delay: 1s;
+}
+nav a:hover+ .links #third{
     color: white;
     transition: 0.5s;
     transition-delay: 1.5s;
@@ -89,6 +104,7 @@ a{
   
     to {
       opacity: 0;
+      display: none;
     }
     
 }
@@ -166,6 +182,7 @@ main div img{
     height:15px;
 }
 
+
 .container{
     display: flex;
     flex-direction: row;
@@ -213,5 +230,10 @@ main div img{
         width:25px;
         height:25px;
     }
+}
+#alert{
+    display: block;
+    position: static;
+    z-index: 2;
 }
 
