--- a/exercises/exercise/dark_theme.css
+++ b/exercises/exercise/dark_theme.css
@@ -234,5 +234,12 @@ main div img{
 #alert{
     display: block;
     position: static;
+
 }
 
+.screenCanv{
+    height: 100%;
+    width: 100%;
+    z-index: 4;
+    display: none;
+}
