--- a/exercises/exercise/dark_theme.css
+++ b/exercises/exercise/dark_theme.css
@@ -84,7 +84,7 @@ a{
     color:rgb(183, 88, 0);
     margin: 5px 5px;
 }
-.loader{
+.loader_cont{
     width: 100%;
     height: 100%;
     position: fixed;
@@ -94,10 +94,10 @@ a{
     display: flex;
 
     animation-duration: 3s;
-    animation-name: loader;
+    animation-name: loader_cont;
     animation-fill-mode: forwards;
 }
-@keyframes loader {
+@keyframes loader_cont {
     from {
       opacity: 1;
     }
@@ -109,7 +109,7 @@ a{
     
 }
 
-body *:not(.loader){
+body *:not(.loader_cont){
     opacity: 0;
     animation-delay: 1s;
     animation-duration: 3s;
@@ -125,7 +125,7 @@ body *:not(.loader){
       opacity: 1;
     }
 }
-.loader img{
+.loader_cont img{
     margin: 0 auto;
 }
 main{
